--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "cors": "^2.8.5"
+    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^5.0.0",
+    "pdf2pic": "^3.0.0"
+  },
+  "engines": {
+    "node": "22",
+    "main": "index.js"
   }
 }
